feat: adding Category and CategoryType

--- a/amazon-catalog.fsproj
+++ b/amazon-catalog.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Domain/Entities/CategoryType.fs" />
+    <Compile Include="Domain/Entities/Category.fs" />
     <Compile Include="Domain/Entities/Product.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
