fix: adjust Image type name and add properties in Product type

--- a/amazon-catalog.fsproj
+++ b/amazon-catalog.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Domain/Entities/Image.fs" />
     <Compile Include="Domain/Entities/CategoryType.fs" />
     <Compile Include="Domain/Entities/Category.fs" />
     <Compile Include="Domain/Entities/Product.fs" />
