--- a/amazon-catalog.fsproj
+++ b/amazon-catalog.fsproj
@@ -10,7 +10,13 @@
     <Compile Include="Domain/Entities/CategoryType.fs" />
     <Compile Include="Domain/Entities/Category.fs" />
     <Compile Include="Domain/Entities/Product.fs" />
+    <Compile Include="Adapters/Repositories/CatalogRepository.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper.FSharp" Version="4.5.0" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
 </Project>
