feat: adding Donald library

--- a/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
+++ b/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Donald" Version="9.0.1" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
