--- a/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
+++ b/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="Helpers.fs" />
     <Compile Include="Entities/CategoryType.fs" />
     <Compile Include="Entities/Category.fs" />
     <Compile Include="Entities/Image.fs" />
