refact: creating a method to handle DbError from Donald

--- a/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
+++ b/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Library.fs" />
+    <Compile Include="Data/Helpers.fs" />
     <Compile Include="Data/Repositories/ProductRepository.fs" />
   </ItemGroup>
 
