--- a/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
+++ b/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Library.fs" />
     <Compile Include="Data/Helpers.fs" />
+    <Compile Include="Data/Database.fs" />
     <Compile Include="Data/Repositories/ProductRepository.fs" />
   </ItemGroup>
 
