--- a/src/Amazon.Catalog.WebApi/appsettings.json
+++ b/src/Amazon.Catalog.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CatalogDb": {
+    "ConnectionString": "Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+  }
 }
