--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <Compile Include="Library.fs" />
+    <Compile Include="Commands/CreateProductCommand.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Amazon.Catalog.Core\Amazon.Catalog.Core.fsproj" />
   </ItemGroup>
 
 </Project>
