feat: development of get product by id

--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Amazon.Catalog.Core\Amazon.Catalog.Core.fsproj" />
+    <ProjectReference Include="..\Amazon.Catalog.Adapters\Amazon.Catalog.Adapters.fsproj" />
   </ItemGroup>
 
 </Project>
