refact: restructure WebAPI creating separte controllers

--- a/src/Amazon.Catalog.WebApi/Amazon.Catalog.WebApi.fsproj
+++ b/src/Amazon.Catalog.WebApi/Amazon.Catalog.WebApi.fsproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Controllers/BaseController.fs" />
+    <Compile Include="Controllers/ProductController.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
