--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Library.fs" />
     <Compile Include="Commands/CreateProductCommand.fs" />
+    <Compile Include="Commands/DeleteProductCommand.fs" />
   </ItemGroup>
 
   <ItemGroup>
