feat: adding serilog

--- a/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
+++ b/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
@@ -12,5 +12,11 @@
     <Compile Include="Entities/Image.fs" />
     <Compile Include="Entities/Product.fs" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="3.0.0-dev-02022" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
+  </ItemGroup>
 
 </Project>
