--- a/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
+++ b/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
@@ -15,6 +15,7 @@
   
   <ItemGroup>
     <PackageReference Include="Serilog" Version="3.0.0-dev-02022" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
   </ItemGroup>
