--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Library.fs" />
     <Compile Include="Commands/CreateProductCommand.fs" />
     <Compile Include="Commands/DeleteProductCommand.fs" />
+    <Compile Include="Commands/UpdateProductCommand.fs" />
   </ItemGroup>
 
   <ItemGroup>
