feat: creating CategoryType repository

--- a/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
+++ b/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Data/Helpers.fs" />
     <Compile Include="Data/Database.fs" />
     <Compile Include="Data/Repositories/ProductRepository.fs" />
+    <Compile Include="Data/Repositories/CategoryTypeRepository.fs" />
   </ItemGroup>
 
   <ItemGroup>
