--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Commands/CreateCategoryTypeCommand.fs" />
+    <Compile Include="Commands/CreateCategoryCommand.fs" />
     <Compile Include="Commands/CreateProductCommand.fs" />
     <Compile Include="Commands/DeleteProductCommand.fs" />
     <Compile Include="Commands/UpdateProductCommand.fs" />
