feat: add CategoryController

--- a/src/Amazon.Catalog.WebApi/Amazon.Catalog.WebApi.fsproj
+++ b/src/Amazon.Catalog.WebApi/Amazon.Catalog.WebApi.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Controllers/BaseController.fs" />
     <Compile Include="Controllers/ProductController.fs" />
     <Compile Include="Controllers/CategoryTypeController.fs" />
+    <Compile Include="Controllers/CategoryController.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
