feat: add ProductCategoryRepository

--- a/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
+++ b/src/Amazon.Catalog.Core/Amazon.Catalog.Core.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Entities/Category.fs" />
     <Compile Include="Entities/Image.fs" />
     <Compile Include="Entities/Product.fs" />
+    <Compile Include="Entities/ProductCategory.fs" />
   </ItemGroup>
   
   <ItemGroup>
