--- a/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
+++ b/src/Amazon.Catalog.Adapters/Amazon.Catalog.Adapters.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Data/Repositories/ProductRepository.fs" />
     <Compile Include="Data/Repositories/CategoryTypeRepository.fs" />
     <Compile Include="Data/Repositories/CategoryRepository.fs" />
+    <Compile Include="Data/Repositories/ProductCategoryRepository.fs" />
   </ItemGroup>
 
   <ItemGroup>
