feat: add LinkProductWithCategory command

--- a/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
+++ b/src/Amazon.Catalog.Application/Amazon.Catalog.Application.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Commands/CreateProductCommand.fs" />
     <Compile Include="Commands/DeleteProductCommand.fs" />
     <Compile Include="Commands/UpdateProductCommand.fs" />
+    <Compile Include="Commands/LinkProductWithCategoryCommand.fs" />
   </ItemGroup>
 
   <ItemGroup>
